[package]
name = "wasm-rayon"
version = "0.1.0"
edition = "2021"

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2" }
rayon = "1.5"
wasm-bindgen-rayon = "1.0"
js-sys = "0.3.57"
web-sys = {version = "0.3", features = [
    "console", 
    "Worker", 
    "WorkerGlobalScope", 
    "DedicatedWorkerGlobalScope",
    "MessageEvent"]}

[dev-dependencies]
wasm-bindgen-test = "0.3"